<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="Companion">
        <EditTextPreference
            android:key="companion_name"
            android:title="@string/pref_companion_name_title"
            android:defaultValue="Zoli"
            android:inputType="textCapWords" />

        <ListPreference
            android:key="wake_word_model"
            android:title="@string/pref_wake_word_title"
            android:defaultValue="wakewords/hello_zoli.tflite"
            android:entries="@array/wake_word_labels"
            android:entryValues="@array/wake_word_values" />

        <SeekBarPreference
            android:key="sensitivity"
            android:title="@string/pref_sensitivity_title"
            android:defaultValue="50"
            android:min="0"
            app:max="100"
            app:showSeekBarValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Daily Check-in">
        <SwitchPreferenceCompat
            android:key="check_in_enabled"
            android:title="@string/pref_check_in_enabled_title"
            android:defaultValue="true" />

        <EditTextPreference
            android:key="check_in_greeting"
            android:title="@string/pref_check_in_greeting_title"
            android:defaultValue="Szia! Minden rendben van?"
            android:dependency="check_in_enabled" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Emergency">
        <SwitchPreferenceCompat
            android:key="emergency_enabled"
            android:title="@string/pref_emergency_enabled_title"
            android:defaultValue="true" />

        <EditTextPreference
            android:key="emergency_phrase"
            android:title="@string/pref_emergency_phrase_title"
            android:defaultValue="Hívd Zolit"
            android:dependency="emergency_enabled" />
    </PreferenceCategory>

</PreferenceScreen>
